--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,12 +21,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel cython numpy
         pip install -r requirements.txt
         pip install pytest pytest-cov
     
-    - name: Build extension
-      run: python setup.py build_ext --inplace
+    - name: Build and install extension
+      run: pip install -e .
     
     - name: Run tests
       run: pytest tests/ -v --cov=dlx --cov-report=term-missing
